--- a/package.json
+++ b/package.json
@@ -1,39 +1,26 @@
 {
-  "name": "react-employees",
-  "version": "0.1.0",
-  "private": true,
+  "name": "react-express-employee",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lbrantcollins/react-express-employee.git"
+  },
+  "author": "Brant Collins and Sebastian Portuondo",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/lbrantcollins/react-express-employee/issues"
+  },
+  "homepage": "https://github.com/lbrantcollins/react-express-employee#readme",
   "dependencies": {
-    "bootstrap": "^4.3.1",
-    "eslint": "^6.1.0",
     "react": "^16.9.0",
-    "react-bootstrap": "^1.0.0-beta.11",
-    "react-dom": "^16.9.0",
-    "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.0",
-    "react-search-box": "^2.0.1",
+    "react-create-app": "^2.0.6",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.87.3",
     "typescript": "^3.5.3"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
   }
 }
