--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "react-express-employee",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "repository": {
     "type": "git",
@@ -17,10 +20,26 @@
   },
   "homepage": "https://github.com/lbrantcollins/react-express-employee#readme",
   "dependencies": {
+    "ajv": "^6.10.2",
     "react": "^16.9.0",
     "react-create-app": "^2.0.6",
+    "react-dom": "^16.9.0",
+    "react-scripts": "^3.1.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.87.3",
-    "typescript": "^3.5.3"
+    "typescript": "^3.5.3",
+    "webpack": "^4.39.1"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
